Archive/3648b1a87eceebd4f5168ccd8a5259b5-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp:66:20: error: invalid conversion from 'const char*' to 'char' [-fpermissive]
   char s[6]{"Hello"};                           
                    ^
